Add icons, license, headers, deb

--- a/deshader.desktop
+++ b/deshader.desktop
@@ -1,9 +1,10 @@
 [Desktop Entry]
 Type=Application
-Name=Deshader Launcher
+Name=Deshader
 Comment=GLSL Shader Debugging Toolkit
 Categories=Development
 MimeType=application/x-elf
-Exec=/usr/bin/deshader-run %F
-Icon=deshader-run
+Exec=/usr/bin/deshader-run %F -gui
+StartupWMClass=deshader
+Icon=deshader
 Keywords=deshader;glsl;shader
