Update deshader version, retrying launcher builds, not stripping debug info

--- a/deshader.desktop
+++ b/deshader.desktop
@@ -4,7 +4,7 @@ Name=Deshader
 Comment=GLSL Shader Debugging Toolkit
 Categories=Development
 MimeType=application/x-elf
-Exec=/usr/bin/deshader-run %F -gui
+Exec=/usr/bin/deshader-run %F
 StartupWMClass=deshader
 Icon=deshader
-Keywords=deshader;glsl;shader
+Keywords=deshader;glsl;shader;debug
